--- a/extensions/amp-pinterest/0.1/amp-pinterest.css
+++ b/extensions/amp-pinterest/0.1/amp-pinterest.css
@@ -121,7 +121,7 @@
 /* count bubble above */
 
 .-amp-pinterest-count-pad-above {
-  margin-top: 30px;
+  /*margin-top: 30px;*/
 }
 
 .-amp-pinterest-count-pad-above-tall {
