--- a/extensions/amp-pinterest/0.1/amp-pinterest.css
+++ b/extensions/amp-pinterest/0.1/amp-pinterest.css
@@ -125,7 +125,7 @@
 }
 
 .-amp-pinterest-count-pad-above-tall {
-  margin-top: 38px;
+  /*margin-top: 38px;*/
 }
 
 .-amp-pinterest-bubble-above {
@@ -150,7 +150,7 @@
   text-decoration: none;
   color: #777;
   bottom: 29px;
-  height: 37px;
+  height: 39px;
   width: 56px;
   background: transparent url(https://s-passets.pinimg.com/images/pidgets/count_north_white_rect_28_2.png) 0 0 no-repeat;
   background-size: 56px 37px;
